--- a/src/main/java/EditorTab.form
+++ b/src/main/java/EditorTab.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="EditorTab">
-  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="751" height="468"/>
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <splitpane id="829d3">
+      <splitpane id="829d3" binding="contentSplitpane">
         <constraints>
           <grid row="1" column="0" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="200"/>
@@ -18,6 +18,7 @@
           <dividerLocation value="200"/>
           <dividerSize value="10"/>
           <orientation value="0"/>
+          <resizeWeight value="0.8"/>
         </properties>
         <border type="none"/>
         <children>
@@ -29,7 +30,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <splitpane id="14896">
+              <splitpane id="14896" binding="outputSplitPane">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
                     <preferred-size width="200" height="200"/>
@@ -65,32 +66,13 @@
                       </scrollpane>
                     </children>
                   </grid>
-                  <grid id="1223e" binding="stdOutPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                    <margin top="0" left="0" bottom="0" right="0"/>
+                  <grid id="1223e" binding="stdOutPanel" layout-manager="GridBagLayout">
                     <constraints>
                       <splitpane position="left"/>
                     </constraints>
                     <properties/>
                     <border type="none"/>
-                    <children>
-                      <scrollpane id="b1ad">
-                        <constraints>
-                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                        </constraints>
-                        <properties/>
-                        <border type="none"/>
-                        <children>
-                          <component id="1473c" class="javax.swing.JTextArea" binding="stdOutTextArea">
-                            <constraints/>
-                            <properties>
-                              <editable value="false"/>
-                              <lineWrap value="true"/>
-                              <wrapStyleWord value="true"/>
-                            </properties>
-                          </component>
-                        </children>
-                      </scrollpane>
-                    </children>
+                    <children/>
                   </grid>
                 </children>
               </splitpane>
@@ -106,10 +88,18 @@
           </grid>
         </children>
       </splitpane>
+      <component id="4aa1f" class="javax.swing.JLabel" binding="messageLabel">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Label"/>
+        </properties>
+      </component>
       <grid id="1fa18" binding="buttonsPanel" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="1" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="1" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
